# inventory

./: .gitignore  Procfile  README.rst  manage.py  pyproject.toml  requirements.txt
inventory/: admin.py  apps.py  forms.py  models.py  operations.py  urls.py  views.py
inventory/common/: __init__.py  dt.py
inventory/fixtures/: test_data.json  units.json
inventory/migrations/: 0001_initial.py  0002_add_user.py
inventory/static/: index.js  main.css
inventory/templates/: base.html  index.html  item_add.html  item_delete.html  item_get.html  update.html
inventory/templates/registration/: log_out.html  login.html
inventory/templatetags/: common.py
inventory/tests/: test_datetime.py  test_models.py  test_views.py  util.py
server/: asgi.py  settings.py  urls.py  wsgi.py
