[tool.poetry]
name = "inventory"
version = "0.1.0"
description = "Manage your food stockpile!"
authors = ["macph <macph@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
psycopg2 = "^2.8.5"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
